# harvest

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODING_STANDARDS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  ai_solution.py  docker-compose.yml  generate_gif.py  harvest_mcp.py  pyproject.toml  requirements.txt  run.py  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.harvest/: config.example.yaml
docs/: P2P_ARCHITECTURE.md  P2P_DESIGN.md  P2P_NETWORK.md
examples/: basic_scrape.py  scrape_to_memory.py
harvest/: __init__.py  api_detector.py  batch.py  browser.py  browser_pool.py  cache.py  captcha_solver.py  cli.py  compliance.py  config.py  contacts.py  core.py  crawl.py  dashboard.py  driftz.py  export.py  extract.py  failures.py  logger.py  mcp_server.py  mcp_tools.py  memory_monitor.py  monitor.py  notify.py  p2p_network.py  persistent_cache.py  pipeline.py  plugins.py  preprocess.py  proxy_rotator.py  rate_limiter.py  recovery.py  robots.py  rotator.py  scheduler.py  script_generator.py  security.py  self_healing.py  semantic_cache.py  server.py  (+8 more)
harvest/commands/: __init__.py  p2p.py  parser.py  scrape.py  site.py  system.py
harvest/integrations/: crawl4ai_backend.py  denseforge.py
harvest/p2p/: __init__.py  bootstrap_server.py  error_handler.py  node.py
tests/: test_all.py  test_browser_pool.py  test_crawl4ai.py  test_docker.py  test_live.py  test_p2p.py  test_persistent_cache.py  test_security.py  test_semantic_cache_embeddings.py  test_singleflight.py
