[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "harvest-agent"
version = "0.8.0"
description = "Universal web collection engine — extract, monitor, and search any website through Cloudflare"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "zad111ak" }]
keywords = ["web-scraping", "extraction", "cloudflare", "monitoring", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "scrapling>=0.4.9",
    "beautifulsoup4>=4.12",
    "aiohttp>=3.9",
    "loguru>=0.7",
    "pydantic>=2.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0"]
yolo = ["ultralytics>=8.0"]
server = ["fastapi>=0.109.0", "uvicorn>=0.27.0"]
rich = ["rich>=13.0"]
embeddings = ["sentence-transformers>=2.2"]
all = ["harvest-agent[llm,yolo,server,rich,embeddings]"]
mcp = ["mcp>=1.0"]

[project.scripts]
harvest = "harvest.cli:main"

[tool.setuptools.packages.find]
include = ["harvest*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
